--- a/git-interface/git_interface.glade
+++ b/git-interface/git_interface.glade
@@ -243,23 +243,25 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow" id="current_scrolled">
+          <object class="GtkScrolledWindow" id="new_scrolled">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <property name="shadow-type">in</property>
             <child>
-              <object class="GtkViewport" id="viewport_current">
+              <object class="GtkViewport" id="viewport_new">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
+                <property name="shadow-type">none</property>
                 <child>
-                  <object class="GtkLabel" id="current_content_label">
+                  <object class="GtkLabel" id="new_content_label">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
+                    <property name="xalign">0.009999999776482582</property>
                   </object>
                 </child>
               </object>
@@ -267,63 +269,7 @@
           </object>
           <packing>
             <property name="left-attach">0</property>
-            <property name="top-attach">3</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkScrolledWindow" id="incoming_scrolled">
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="vexpand">True</property>
-            <property name="shadow-type">in</property>
-            <child>
-              <object class="GtkViewport" id="viewport_incoming">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
-                <child>
-                  <object class="GtkLabel" id="incoming_content_label">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="hexpand">True</property>
-                    <property name="vexpand">True</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">4</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkScrolledWindow" id="old_scrolled">
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="vexpand">True</property>
-            <property name="shadow-type">in</property>
-            <child>
-              <object class="GtkViewport" id="viewport_old">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
-                <child>
-                  <object class="GtkLabel" id="old_content_label">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="hexpand">True</property>
-                    <property name="vexpand">True</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">5</property>
+            <property name="top-attach">1</property>
           </packing>
         </child>
         <child>
@@ -379,24 +325,24 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow" id="new_scrolled">
+          <object class="GtkScrolledWindow" id="current_scrolled">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <property name="shadow-type">in</property>
             <child>
-              <object class="GtkViewport" id="viewport_new">
+              <object class="GtkViewport" id="viewport_current">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
-                <property name="shadow-type">none</property>
                 <child>
-                  <object class="GtkLabel" id="new_content_label">
+                  <object class="GtkLabel" id="current_content_label">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
+                    <property name="xalign">0.009999999776482582</property>
                   </object>
                 </child>
               </object>
@@ -404,7 +350,65 @@
           </object>
           <packing>
             <property name="left-attach">0</property>
-            <property name="top-attach">1</property>
+            <property name="top-attach">3</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkScrolledWindow" id="incoming_scrolled">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="vexpand">True</property>
+            <property name="shadow-type">in</property>
+            <child>
+              <object class="GtkViewport" id="viewport_incoming">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <child>
+                  <object class="GtkLabel" id="incoming_content_label">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">True</property>
+                    <property name="xalign">0.009999999776482582</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="left-attach">0</property>
+            <property name="top-attach">4</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkScrolledWindow" id="old_scrolled">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="vexpand">True</property>
+            <property name="shadow-type">in</property>
+            <child>
+              <object class="GtkViewport" id="viewport_old">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <child>
+                  <object class="GtkLabel" id="old_content_label">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">True</property>
+                    <property name="xalign">0.009999999776482582</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="left-attach">0</property>
+            <property name="top-attach">5</property>
           </packing>
         </child>
         <child>
@@ -750,7 +754,7 @@
                 <property name="can-focus">True</property>
                 <child>
                   <!-- n-columns=1 n-rows=2 -->
-                  <object class="GtkGrid">
+                  <object class="GtkGrid" id="grid_drawing_area">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <child>
@@ -766,18 +770,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkDrawingArea" id="drawing_area">
-                        <property name="name">drawing_area</property>
-                        <property name="width-request">10</property>
-                        <property name="visible">True</property>
-                        <property name="can-focus">False</property>
-                        <property name="hexpand">True</property>
-                        <property name="vexpand">True</property>
-                      </object>
-                      <packing>
-                        <property name="left-attach">0</property>
-                        <property name="top-attach">1</property>
-                      </packing>
+                      <placeholder/>
                     </child>
                   </object>
                   <packing>
